# CLI-agent-installer

./: .gitignore  ALL_TESTS_COMPLETE_100_REAL_DATA.md  ARCHITECTURE.md  BOTH_MIGRATIONS_COMPLETE.md  CHANGELOG.md  CLI_TUI_PRODUCTION_DATA_TEST.md  COMPLETE.md  EXECUTABLE_NAME.md  FINAL_COMPLETE_REPORT.md  FINAL_REPORT.md  INSTALL.md  MCP_MIGRATION_COMPLETE.md  README.md  README_SUMMARY.md  TEST_SUITE_COMPLETE.md  TODO_POST_MIGRATION.md  TUI_PRODUCTION_DATA_TEST.md  demo_tui.py  demo_tui_auto.py  install.sh  pyproject.toml  test_logger_simple.py  test_tui.py
src/cli_agent_installer/: __init__.py  api.py  cli.py  tui.py
src/cli_agent_installer/core/: __init__.py  checklist.py  log.py  manifest.py  sync.py  version.py
tests/: __init__.py  test_installer.py
tests/integration/: run_all_tests.py
